syntax = "proto3";
package http;
option go_package = "server/pb/pb_http";
import "common.proto";

message ReqEntry {
    enum EnumPlatform {
      None = 0;
      Android = 1;
      Ios = 2;
      WinPC = 3;
    }
    enum EnumEnv {
      Dev = 0;    //开发服
      Alpha = 2;  //内网测试服
      Office = 1; //正式服
    }
    string Secret = 1;         //密钥
    string UUID = 2;           //设备号
    EnumPlatform Platform = 3; //平台
    EnumEnv Env = 4;           //环境
    string ResVersion = 5;     //客户端资源版本号，用于判断热更新
    string GameVersion = 6;    //游戏版本号，用于强更等内容
  }
  
  //入口消息resp，服务端将登录、注册、长连接等地址下发
  message RespEntry {
    message Addr {
      string Host = 1;
      int32 Port = 2;
    }
    common.ErrorCode ErrCode = 1;
    string LoginUrl = 2;    //登录http地址
    string RegisterUrl = 3; //注册http地址
    Addr TcpUrl = 4;        // TCP连接地址
    Addr WebSocketUrl = 5;  // Websocket连接地址
  }
  
  message ReqRegister {
    string Account = 1;
    string Password = 2;
    string AppId=3;     //appId
    string ChannelId=4; //渠道
    string MacId=5;     //登录设备物理地址
  }
  
  message RespRegister { common.ErrorCode ErrCode = 1; }
  
  message ReqLogin {
    string Account = 1;
    string Password = 2;
    string AppId=3;     //appId
  }
  
  message RespLogin {
    common.ErrorCode ErrCode = 1;
    string Token = 2;
  }
